@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 487963f08dac9893ea3923b07f4291cad960ee86 ChangeLog
+SHA1 aebcc979710ba12ddff1e24d7b6617f029835363 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 54314156181b9a26ffae51dd4ba0d2fd7ac9fd3f META.yml
+SHA1 f99039fbbe624230c017e9ce2fb40ebc79adbcb5 META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 eabb52fc368df38bb2075925dbeed7ad6505bf2a lib/Term/Menus.pm
+SHA1 2020c10fe7ccdd55d2cecac34e6da74e801d9b77 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk3ur7oACgkQdsVAdUjO9Il7QgCeMNsqIEccIbbPeKf2PWLV8VFe
-c0EAni/6MCoDiix4oafgzPmtRU22BhCm
-=v0ZZ
+iEYEARECAAYFAk4SX78ACgkQdsVAdUjO9IlTMwCcDs13m2UgYliU+PoeYng11Huh
+gwgAnihxHNBgTm9+ySvB3RXVel3wZeug
+=kVp7
 -----END PGP SIGNATURE-----
