@@ -1,3 +1,10 @@
+2011-07-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.84 released.
+
+        * Added ability to revise banner with anonymous subs.
+
+
 2011-06-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.83 released.
